chores: and build release